css/style.css
.theme-dark{
  --navbarbg: #050505;
  --breadcrumbbg: #181818;
  --breadcrumbsvg: invert(100%) sepia(100%) saturate(0%) hue-rotate(302deg) brightness(101%) contrast(102%);
  --breadcrumbshadowcolor: #6B6B6B;
  --footerbg: rgba(0, 0, 0, 0.35);
  /*--generalshadow: 0px 5px 10px -5px var(--breadcrumbshadowcolor); */
  --bodybgcolor: #050505;
  --bodylineheight: 1.9em; /*line height ok per dislessia, almeno 1.5*/
  --globaltxtsize: 1em;
  --txtcolor: #f1f1f1;
  --linkcolor: #1BDC88;
  --linkvisitedcolor: #BD89EB;
  --currentnavpagetxtcolor: black;
  --currentnavpagebg: #1BDC88;
  --navlinkhoverbg: white;
  --navlinkhovercolor: black;
  --themebg: #f1f1f1;
  --themebgimg: url(../img/theme/moon.png);
  --themeborder: #fff;
  --cardbg: #181818;
  --cardshadow: #141414;
  --cardLogobg: #fff;
  --cardtitlesize: 1.2em;
  --animatedformcolor: #1BDC88;
  --theadcolor: #4D4D4D;
  --tbodycolor: #363535;
  --iconpos: left;
  --formbuttoncolor: #1BDC88;
  --footertxtsize: .8em;
  --tabletxtsize: .7em;
  --logo: url(../img/logo-sfondo-nero.webp);
}

.theme-light{
  --navbarbg: white;
  --breadcrumbbg: white;
  --breadcrumbsvg: none;
  --breadcrumbshadowcolor: #6B6B6B;
  --footerbg: white;
  --bodybgcolor: white;
  --bodylineheight: 1.9em; /*line height ok per dislessia, almeno 1.5*/
  --globaltxtsize: 1em;
  --txtcolor: black;
  --linkcolor: blue;
  --linkvisitedcolor: #681DA8;
  --currentnavpagetxtcolor: black;
  --currentnavpagebg: #1BDC88;
  --navlinkhoverbg: black;
  --navlinkhovercolor: white;
  --themebg: #f1f1f1;
  --themebgimg: url(../img/theme/light.png);
  --themeborder: #a5a5a5;
  --cardbg: white;
  --cardshadow: #141414;
  --cardLogobg: #e1e1e1;
  --cardtitlesize: 1.2em;
  --animatedformcolor: #1BDC88;
  --theadcolor: #e1e1e1;
  --tbodycolor: white;
  --iconpos: right;
  --formbuttoncolor: #1BDC88;
  --footertxtsize: .8em;
  --tabletxtsize: .7em;
  --logo: url(../img/logo-sfondo-bianco.webp);
}


* {
  margin: 0;
  padding: 0;
}

html,
body {
  font-size: 1em;
  font-family: "Verdana", sans-serif;
  line-height: 1.5em;
  margin: auto;
  background: var(--bodybgcolor);
}

body {
  max-width: 1024px;
  margin: auto;
  color: var(--txtcolor);
}

a {
  color: var(--linkcolor);
}

a:visited {
  color: var(--linkvisitedcolor);
}

.aiuti {
  height: 1px;
  width: 1px;
  overflow: hidden;
  position: absolute;
  top: auto;
}

#breadcrumb, #products li, #contactsList li, #serviceList li, #partnerList li, .cards li {
  box-shadow: 0px 5px 10px -5px var(--breadcrumbshadowcolor); ;
}

/*******************
        HEADER
********************/
header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: nowrap;
  align-items: center;
  color: var(--txtcolor);
  height: 5em;
  background-color: var(--navbarbg);
}

header h1 {
  width: 30%;
  height: 100%;
  background: var(--logo) no-repeat center left;
  background-size: contain;
  /*fit the image without cutting it*/
  background-position: left;
  text-indent: -9999em;
  font-size: 1px;
}

/*******************
      NAVIGATION
********************/

#menu {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: var(--txtcolor);
  font-size: 1em;
  white-space: nowrap;
}

#menu ul {
  display: flex;
  flex-direction: row;
  list-style-type: none;
}

#menu li {
  padding: 0em 0em 0em .5em;
  align-self: center;
  /*left padding to properly align to the right the menu no right padding and no flex grow to minimize space*/
}

#menu a {
  text-decoration: none;
  font-weight: bold;
  font-size: 1em;
}

#menu a:visited {
  color: var(--linkvisitedcolor);
}

#menu a {
  padding: .5em .5em;
  border-radius: 1em;
  min-height: 30px;
  min-width: 44px;
}

/*top bottom left right padding in order to eliminate the text movement*/
#menu a:hover {
  background-color: var(--navlinkhoverbg);
  color: var(--navlinkhovercolor);
  text-decoration: underline;
  /*border-radius: 1em;
  padding: .5em .5em; /*top bottom left right padding, introducing it with linear transition moves the text to respect li padding to remove this effect add the same padding in a "non active"*/
  transition: linear 0.14s;
}

#menu a.active{
  background-color: var(--currentnavpagebg);
  color: var(--currentnavpagetxtcolor);
  pointer-events: none;
  cursor: default;
}

#hamburger {
  display: none;
  /*hidden by default in main style, unhidden in mini*/
}


/*--------------------------------------------------------------------------------------------------------------------------------------------*/

#themeButton {
  /*button to change theme with increased specificity to overwrite previous settings on hover*/
  width: 70px;
  height: 30px;
  background: var(--themebgimg) no-repeat center;
  background-size: contain;
  /*fit the image cutting it no stretch*/
  background-color: var(--themebg);
  background-position: var(--iconpos);
  /*when clicked change property throug js to right and bgcolor to #000*/
  transition: linear 0.1s;
  border-radius: 15px;
  border: 2px solid var(--themeborder);
  
  font-size: 1px;
  text-indent: -9999em;
  cursor: pointer;
  margin: 0em 10px; /*siccome cambiare font size cambia anche il valore di un em setto il margine ad uun valore assoluto*/
}

#breadcrumb {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--breadcrumbbg);
  border-radius: 5px;
  color: var(--txtcolor);
  font-size: 1em;
  margin-bottom: 2em;
}

#breadcrumb img {
  height: var(--globaltxtsize);
  width: var(--globaltxtsize);
  margin-left: .3em;
  margin-right: .3em;
  filter: var(--breadcrumbsvg);
}

#breadcrumb a:hover {
  transition: linear 0.14s;
}

/*******************
       CONTENT
********************/

main h1 {
  margin: 1em 0.5em 1em;
  text-align: center;
}

main h2 {
  margin: 1em 0.5em 1em;
  text-align: center;
}
/* ... */

